[profile.release]
lto = true
opt-level = 3
panic = 'abort'

[package]
name = "gquery"
version = "0.1.0"
authors = ["Mohammad Reza Lotfi <mrlotfi@cafebazaar.ir>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geojson = { version= "0.19.0", features=["geo-types"]}
geo = { version = "0.14.1", features=["use-serde"]}
tokio = { version = "*", features=["macros", "rt-threaded"]}
serde = { version = "*", features=["derive"]}
serde_json = "1.0.57"
geo-types = "0.6.0"
structopt = "0.3.16"
colored = "2.0.0"
spade = "1.8.2"
warp = "0.2"
nanoid = "0.3.0"
